force-app/main/default/objects/Sales_Credit_All_2008__c/Sales_Credit_All_2008__c.object-meta.xml
<CustomObject>
    <description>*** Configured January 09 ***
Contains all sales credit data (2008) to be used for reports
All fields read only apart from profile Sys Ad and API User</description>
    <label>Sales Credit All 2008</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Sales Credit All 2008</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Credit All 2008</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>