force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Assisting_Person_2008__c.field-meta.xml
<CustomField>
    <fullName>Assisting_Person_2008__c</fullName>
    <label>Assisting Person 2008</label>
    <length>40</length>
    <type>Text</type>
</CustomField>