force-app/main/default/objects/Sales_Credit_All_2008__c/fields/CIF_Customer_Address_Country_Resp_2008__c.field-meta.xml
<CustomField>
    <fullName>CIF_Customer_Address_Country_Resp_2008__c</fullName>
    <label>CIF Customer Address Country Resp 2008</label>
    <length>80</length>
    <type>Text</type>
</CustomField>