force-app/main/default/objects/Sales_Credit_All_2008__c/fields/CIF_Customer_Code_2008__c.field-meta.xml
<CustomField>
    <fullName>CIF_Customer_Code_2008__c</fullName>
    <label>CIF Customer Code 2008</label>
    <length>10</length>
    <type>Text</type>
</CustomField>