force-app/main/default/objects/Sales_Credit_All_2008__c/fields/CIF_Customer_Industry_2008__c.field-meta.xml
<CustomField>
    <fullName>CIF_Customer_Industry_2008__c</fullName>
    <label>CIF Customer Industry 2008</label>
    <length>60</length>
    <type>Text</type>
</CustomField>