force-app/main/default/objects/Sales_Credit_All_2008__c/fields/CIF_Customer_SIH_Coverage_2008__c.field-meta.xml
<CustomField>
    <fullName>CIF_Customer_SIH_Coverage_2008__c</fullName>
    <label>CIF Customer SIH Coverage 2008</label>
    <length>12</length>
    <type>Text</type>
</CustomField>