force-app/main/default/objects/Sales_Credit_All_2008__c/fields/CIF_TP_Country_Sub_Region_2008__c.field-meta.xml
<CustomField>
    <fullName>CIF_TP_Country_Sub_Region_2008__c</fullName>
    <label>CIF TP Country Sub Region 2008</label>
    <length>80</length>
    <type>Text</type>
</CustomField>