force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Fios_TP_Industry_Sector_2008__c.field-meta.xml
<CustomField>
    <fullName>Fios_TP_Industry_Sector_2008__c</fullName>
    <label>Fios TP Industry Sector 2008</label>
    <length>60</length>
    <type>Text</type>
</CustomField>