force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Fios_TP_SIH_Coverage_2008__c.field-meta.xml
<CustomField>
    <fullName>Fios_TP_SIH_Coverage_2008__c</fullName>
    <label>Fios TP SIH Coverage 2008</label>
    <length>12</length>
    <type>Text</type>
</CustomField>