force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Grandparent_Product_Code_2008__c.field-meta.xml
<CustomField>
    <fullName>Grandparent_Product_Code_2008__c</fullName>
    <label>Grandparent Product Code 2008</label>
    <length>7</length>
    <type>Text</type>
</CustomField>