force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Gt_Grandparent_Product_2008__c.field-meta.xml
<CustomField>
    <fullName>Gt_Grandparent_Product_2008__c</fullName>
    <label>Gt Grandparent Product 2008</label>
    <length>60</length>
    <type>Text</type>
</CustomField>