force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Mark_Up_YTD_USD_2008__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_YTD_USD_2008__c</fullName>
    <label>Mark Up YTD USD 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>