force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Parent_Product_2008__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_2008__c</fullName>
    <label>Parent Product 2008</label>
    <length>80</length>
    <type>Text</type>
</CustomField>