force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Relationship_Mgr_2008__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Mgr_2008__c</fullName>
    <label>Relationship Mgr 2008</label>
    <length>40</length>
    <type>Text</type>
</CustomField>