force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Sales_Business_Area_2008__c.field-meta.xml
<CustomField>
    <fullName>Sales_Business_Area_2008__c</fullName>
    <label>Sales Business Area 2008</label>
    <length>40</length>
    <type>Text</type>
</CustomField>