force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Sales_Division_2008__c.field-meta.xml
<CustomField>
    <fullName>Sales_Division_2008__c</fullName>
    <label>Sales Division 2008</label>
    <length>60</length>
    <type>Text</type>
</CustomField>