force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Sales_Value_YTD_USD_2008__c.field-meta.xml
<CustomField>
    <fullName>Sales_Value_YTD_USD_2008__c</fullName>
    <label>Sales Value YTD USD 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>