force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Salesperson_Location_2008__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Location_2008__c</fullName>
    <label>Salesperson Location 2008</label>
    <length>40</length>
    <type>Text</type>
</CustomField>