force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Trade_Date_2008__c.field-meta.xml
<CustomField>
    <fullName>Trade_Date_2008__c</fullName>
    <label>Trade Date 2008</label>
    <type>Date</type>
</CustomField>