force-app/main/default/objects/Sales_Credit_All_2008__c/fields/Trade_Month_2008__c.field-meta.xml
<CustomField>
    <fullName>Trade_Month_2008__c</fullName>
    <label>Trade Month 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>