force-app/main/default/objects/Sales_Credit_All_2008__c/fields/X02_Feb_2008__c.field-meta.xml
<CustomField>
    <fullName>X02_Feb_2008__c</fullName>
    <label>02 Feb 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>