force-app/main/default/objects/Sales_Credit_All_2008__c/fields/X04_Apr_2008__c.field-meta.xml
<CustomField>
    <fullName>X04_Apr_2008__c</fullName>
    <label>04 Apr 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>