force-app/main/default/objects/Sales_Credit_All_2008__c/fields/X05_May_2008__c.field-meta.xml
<CustomField>
    <fullName>X05_May_2008__c</fullName>
    <label>05 May 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>