force-app/main/default/objects/Sales_Credit_All_2008__c/fields/X06_June_2008__c.field-meta.xml
<CustomField>
    <fullName>X06_June_2008__c</fullName>
    <label>06 June 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>