force-app/main/default/objects/Sales_Credit_All_2008__c/fields/X08_Aug_2008__c.field-meta.xml
<CustomField>
    <fullName>X08_Aug_2008__c</fullName>
    <label>08 Aug 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>