force-app/main/default/objects/Sales_Credit_All_2008__c/fields/X09_Sep_2008__c.field-meta.xml
<CustomField>
    <fullName>X09_Sep_2008__c</fullName>
    <label>09 Sep 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>