force-app/main/default/objects/Sales_Credit_All_2008__c/fields/X11_Nov_2008__c.field-meta.xml
<CustomField>
    <fullName>X11_Nov_2008__c</fullName>
    <label>11 Nov 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>